# wxWidgetHellowrld

./: CMakeLists.txt
src/: main.cpp
